completamento con tabelle

--- a/index.html
+++ b/index.html
@@ -32,7 +32,43 @@
             <!-- /navigatore -->
             <!-- contenuto -->
             <main>
+                <ul>
+                    <h2> &#9207; New Task</h2> <br>
+                    <dd><span class="checked">&check;</span> &nbsp; &nbsp; Quarterly Newsletter <span
+                            class="rettangolino-blu">Editorial</span>
+                        </span></dd> <br><br>
+                </ul>
+                <ul>
+                    <h2> &#9207; Today</h2> <br>
+                    <dd><span class="checked">&check;</span> &nbsp; &nbsp; Recruiting blog post <span
+                            class="rettangolino-blu">
+                            Editorial </span></dd><br>
+                    <dd><span class="checked">&check;</span> &nbsp; &nbsp; Mobile app launch <span
+                            class="rettangolino-viola"> Q1
+                            Goals</span></dd><br>
+                    <dd><span class="crossed">&cross;</span> &nbsp; &nbsp; Interview John H. <span
+                            class="rettangolino-verde">
+                            Recruiting </span></dd><br>
+                    <dd><span class="checked">&check;</span> &nbsp; &nbsp; Summit update to mobile storefronts <span
+                            class="rettangolino-arancione"> Mobile </span></dd>
 
+                </ul>
+                <br><br>
+                <ul>
+                    <h2> &#9207; Upcoming</h2> <br>
+                    <dd><span class="crossed">&cross;</span> &nbsp; &nbsp; Schedule meeting with Alex<span
+                            class="rettangolino-blu">
+                            Editorial </span></dd><br>
+                    <dd><span class="checked">&check;</span> &nbsp; &nbsp; Homepage refresh<span
+                            class="rettangolino-viola"> Q1
+                            Goals</span></dd><br>
+                    <dd><span class="checked">&check;</span> &nbsp; &nbsp; Onboard new Sales team members <span
+                            class="rettangolino-verde">
+                            Recruiting </span></dd><br>
+                    <dd><span class="checked">&check;</span> &nbsp; &nbsp; Review editorial calendar <span
+                            class="rettangolino-arancione"> Mobile </span></dd>
+
+                </ul>
             </main>
             <!-- /contenuto -->
         </div>
